Bug 78997 - [HSW bisected]Aquarium performance reduced a lot
Summary: [HSW bisected]Aquarium performance reduced a lot
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-21 05:34 UTC by zhoujian
Modified: 2017-10-06 14:38 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description zhoujian 2014-05-21 05:34:59 UTC
System Environment:       
----------------------------------------------
Platform: HSW
Libdrm:(master)libdrm-2.4.54-9-g8fc62ca8ac010659023bb63c4759eb683de4f9af
Mesa:	(master)52381a7ffba908410f7a53855f082401fca7293a
Xserver:(master)xorg-server-1.15.99.902-91-g01e18af17f8dc91451fbd09020 Xf86_video_intel:(master)2.99.911-177-gbfd0e41d5c7b8bff28ff429b26f4c977e
Cairo:(master)ead5c7909f3db1d0d81121fc2775c458871891b2
Libva:(staging)51901e340cc467a2d562491121e0de38f5a066fe
Libva_intel_driver:(staging)b3031d16b1ea9ef2ab95bc09e59f0db5214a1125
Kernel: (drm-intel-nightly) git-0791a3

Bug detailed description:
Aquarium performance reduced a lot on HSW. The problem only exists on gnome-session, The problem doesn’t exist on BYT and IVB.

It’s kernel(drm-intel-next-queued) regression, bisecting show that the first bad commit is:78e8fc6b2e3bbce6170d2ead2406d29930077735
Author:     Ville Syrjälä <ville.syrjala@linux.intel.com>
AuthorDate: Tue Apr 29 13:35:44 2014 +0300
Commit:     Daniel Vetter <daniel.vetter@ffwll.ch>
CommitDate: Mon May 5 09:09:25 2014 +0200

    drm/i915: Fix scanout position for real


Reproduce steps:
--------------------------------------------------------------------
1. xinit& 
2. google-chrome-stable --enable-webgl --ignore-gpu-blacklist --user-data-dir Aquarium.html
Comment 1 Chris Wilson 2014-05-21 05:47:53 UTC
What is a lot? Would it happen to be a factor of 2?
Comment 2 zhoujian 2014-05-21 06:08:26 UTC
(In reply to comment #1)
We can't show the percentage on Bugzilla,what mean "a factor of 2"?
Comment 3 Chris Wilson 2014-05-21 06:25:05 UTC
Just whether it dropped from 60fps to 30fps - indicating that it is missing every other vblank interrupt. Or is it even worse?
Comment 4 zhoujian 2014-05-21 07:09:29 UTC
For reduced percentage,I have share to you by E-mail.
Comment 5 Chris Wilson 2014-05-21 07:56:53 UTC
It's a vsync limited scenario, the regression is that we miss interrupts. It is an existing mature and not performance sensitive data, so there is no reason not to say that we miss 1 out of 3 vblanks (i.e. vsync'ed to ~45fps instead of 60fps).
Comment 6 Ville Syrjala 2014-05-21 08:02:29 UTC
I'm guessing this is with HDMI output?

If so, we need this:
http://patchwork.freedesktop.org/patch/26051/
Comment 7 zhoujian 2014-05-21 08:55:17 UTC
(In reply to comment #6)
> I'm guessing this is with HDMI output?
> 
> If so, we need this:
> http://patchwork.freedesktop.org/patch/26051/

The problem only exists on HDMI, VGA is OK.
With the patch, fixed the issue on HDMI.
Comment 8 Daniel Vetter 2014-05-22 06:44:41 UTC
Fix is merged to -nightly.
Comment 9 Daniel Vetter 2014-05-22 12:58:54 UTC
commit a60babee6aca73b329d001c705ab306bdcfa7456
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Thu May 15 20:23:23 2014 +0300

    drm/i915: Fix gen2 and hsw+ scanline counter
Comment 10 zhoujian 2014-05-23 01:39:06 UTC
(In reply to comment #9)
With above the patch,the issue has fixed,so close it.
Comment 11 Elizabeth 2017-10-06 14:38:10 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.